<resources>
    <string name="app_name">JokeApp</string>
    <string name="menu_home">Início</string>
    <string name="menu_joke_day">Piada do dia</string>
    <string name="menu_about">Sobre</string>
    <string name="menu_social">Social</string>

    <string name="version_name">Versão (%1$s)</string>
    <string name="about_norris">Carlos Ray \"Chuck\" Norris (Ryan, 10 de março de 1940) é um artista marcial, ator, produtor de cinema, argumentista estadounidense. Depois de servir na Força Aérea dos Estados Unidos, começou a tornar-se conhecido como praticante de artes marciais. Em 1990, fundou a sua escola de artes marciais, Chun Kuk Do, e em 2005, a World Combat League (WCL), uma competição de combate por equipes.</string>
    <string name="url_wikipedia">https://pt.wikipedia.org/wiki/Chuck_Norris</string>


</resources>